Fix spacing and alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.container {
+.wrapper {
     display: grid;
     grid-template-rows: 15% 70% 15%;
 }
 
 .list {
-    /* border: 1px solid seagreen; */
     width: clamp(250px, calc(250px + 20vw), 280px);
 }
 
